--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{% block title %}Does it work?{% endblock %}</title>
+    <title>{{ title }}</title>
     <meta charset="UTF-8" />
     {% if description %}
     <meta name="description" content="{{ description }}" />
@@ -12,16 +12,15 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
     />
     <link rel="stylesheet" href="/style.css?v={% version %}" />
-    {% block head %}{% endblock %}
     <script defer src="/js/alpine.js?v={% version %}"></script>
   </head>
-  <body>
-    {% include "partials/site-header.html" %}
+  <body class="h-full text-gray-900 antialiased bg-gray-50 bg-top bg-contain">
+    {% include "site-header.njk" %}
     <main tabindex="-1" id="main-content">
       {% block content %}
       {{ content | safe }}
       {% endblock %}
     </main>
-    {% include "partials/site-footer.html" %}
+    {% include "site-footer.html" %}
   </body>
 </html>
