update meta text on home & about

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,9 @@
 ---
 layout: default.njk
 title: Portfolio - Ryan Bullough
-description: My little slice of the internet
-
+description: My personal/profession website.
+metaTitle: Ryan Bullough - Freelance Front-end web developer and UX designer from Australia
+metaDescription: Designer/Engineer who blends code and user centric design philosophies.
 ---
 
 {%- block hero-%}
