add monospace font to about page

--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{{ title | safe }} | Ryan Bullough</title>
+    <title>{{ title | safe }} » Ryan Bullough</title>
     <meta charset="UTF-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta
