update hover effects

--- a/src/_layouts/single.njk
+++ b/src/_layouts/single.njk
@@ -14,7 +14,7 @@ layout: default.njk
   </article>
 
   <div class="text-center">
-    <a class="text-gray-300 font-medium" href="#post-head">Back to top</a>
+    <a class="text-gray-600 font-medium hover:text-gray-800 transition-colors" href="#post-head">Back to top</a>
   </div>
 </section>
 
