--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -22,7 +22,7 @@
     font-family: courier, monospace;
   }
   a.link {
-    @apply relative before:bg-pink-400 before:absolute before:left-0 before:bottom-[1px] before:w-full before:h-0.5 before:-z-10 before:transition-all hover:before:bottom-0 hover:before:h-full;
+    @apply relative before:bg-pink-400 before:absolute before:left-0 before:bottom-[1px] before:w-full before:h-0.5 before:-z-10 before:transition-all hover:before:bottom-0 hover:before:h-full hover:text-gray-50 transition-colors;
   }
   blockquote {
     @apply pl-8 mt-7 text-2xl text-gray-500 font-light;
