--- a/src/_layouts/single.njk
+++ b/src/_layouts/single.njk
@@ -7,6 +7,22 @@ layout: default.njk
 {%- endblock singleTop-%}
 
 <section id="start" class="max-w-screen-xl mx-auto px-5">
+  <div class="pt-16 post text-gray-800 dark:text-gray-200 md:grid md:gap-x-10 md:gap-y-5 md:grid-cols-10 md:items-start">
+
+    {% if testimonial %}
+      <div class="lg:pt-20 col-start-1 col-end-3 md:text-right pb-5 lg:pb-0 text-gray-600 dark:text-gray-300 md:flex flex-col items-end">
+        <svg class="text-green-400 w-10 lg:w-16" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z" />
+        </svg>
+        <span class="block font-bold text-2xl md:text-2xl text-gray-800 dark:text-gray-200 tracking-tight">{{ clientName }}</span>
+        <span class="text-lg tracking-tight dark:text-gray-300 text-gray-600">{{ clientPos }}</span>
+      </div>
+      <div class="lg:pt-20 col-start-3 col-end-10 font-serif text-2xl lg:text-3xl pb-20 lg:pb-28 dark:text-orange-300">
+        {{ testimonial }}
+      </div>
+    {% endif %}
+  </div>
+
   <article
     class="pb-40 work text-lg tracking-tight text-gray-700 dark:text-gray-300 md:grid md:gap-x-10 md:gap-y-5 md:grid-cols-10 md:items-start"
   >
