update homepage title

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: default.njk
-title: Portfolio - Ryan Bullough
+title: Portfolio
 description: My personal/profession website.
 metaTitle: Ryan Bullough - Freelance Front-end web developer and UX designer from Australia
 metaDescription: Designer/Engineer who blends code and user centric design philosophies.
