--- a/src/index.njk
+++ b/src/index.njk
@@ -2,8 +2,8 @@
 layout: default.njk
 title: Portfolio
 description: My personal/profession website.
-metaTitle: Ryan Bullough - Freelance Front-end web developer and UX designer from Australia
-metaDescription: Designer/Engineer who blends code and user centric design philosophies.
+metaTitle: Ryan Bullough - Freelance front-end web developer and UX designer from Australia.
+metaDescription: Designer/Developer who blends code and user centric design philosophies.
 ---
 
 {%- block hero-%}
