--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,10 +1,7 @@
 @tailwind components;
-
-@tailwind utilities;
-@layer utilities {
-}
-
 @tailwind base;
+@tailwind utilities;
+
 @layer base {
   h2 {
     @apply md:text-4xl text-3xl font-semibold;
@@ -32,6 +29,41 @@
   }
   ol > li {
     @apply mt-6 ml-7;
+  }
+  .toc {
+    padding: 1em;
+    line-height: 2;
+  }
+  .toc ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .toc ul ul {
+    padding-left: 2em;
+  }
+  .toc li a {
+    @apply hover:text-pink-400 transition-colors;
+    display: inline-block;
+    color: #aaa;
+    text-decoration: none;
+    transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .toc li.visible > a {
+    color: #111;
+    transform: translate(5px);
+  }
+
+  .toc-marker {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  .toc-marker path {
+    transition: all 0.3s ease;
   }
 }
 
