--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,7 @@
 layout: default.njk
 title: Portfolio
 description: My personal/profession website.
-metaTitle: Ryan Bullough - Freelance front-end web developer and UX designer from Australia.
+metaTitle: Ryan Bullough - Freelance front-end web developer and UX designer based in Australia.
 metaDescription: Designer/Developer who blends code and user centric design philosophies.
 ---
 
