--- a/src/_includes/_site-header.njk
+++ b/src/_includes/_site-header.njk
@@ -3,7 +3,7 @@
   href="#main-content"
   >Skip to content</a
 >
-<header role="banner" class="pb-32 bg-{{ headerColor or 'white'}}-500">
+<header role="banner" class="pb-12 lg:pb-16 bg-{{ headerColor or 'white'}}-500">
   <div class="max-w-7xl mx-auto px-5 pt-8 pb-11">
     <a class="inline-block" href="/">
       <p class="bl font-serif font-bold text-{{ headerTextColor or 'pink-500'}} text-4xl lg:text-6xl lg:pb-16 pb-10 px-2">
