--- a/src/_includes/hero.njk
+++ b/src/_includes/hero.njk
@@ -1,5 +1,5 @@
 <!-- hero -->
-<section id="hero" class="pt-52 pb-32 {{ heroBGColor }}">
+<section id="hero" class="pt-32 lg:pt-40 pb-32 {{ heroBGColor }}">
   <div class="max-w-screen-xl m-auto px-5">
     <div class="font-black grid grid-cols-12 gap-5">
       <div class="col-start-1 col-end-12 lg:col-end-10">
