--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ metaDescription: Designer/Developer who blends code and user centric design phil
 ---
 
 {%- block hero-%}
-  {% set heroText = "Digital impact doesn't need to be extravagent." %}
+  {% set heroText = "Digital impact doesn't need to be extravagant." %}
   {% set heroDescription = "Ryan Bullough is an Australian engineer who designs and builds simple, well-considered products with human-centred practices." %}
   {% set heroBGColor = "bg-gray-200" %}
   {% set heroTextColor = "black" %}
