--- a/src/_includes/_featuredWorks.njk
+++ b/src/_includes/_featuredWorks.njk
@@ -2,7 +2,7 @@
   <div class="px-5 max-w-screen-xl lg:mx-auto">
     <div class="py-16 grid gap-x-2 gap-y-5 sm:gap-y-2 grid-cols-1 md:grid-cols-3 md:grid-flow-row-dense">
       <div class="md:col-span-3">
-        <span class="block text-xl tracking-tight text-gray-700 dark:text-gray-300 mb-10 md:w-2/3">
+        <span class="block text-xl tracking-tight text-gray-700 mb-10 md:w-2/3">
         {{ data.featuredWorkDescription }}
         </span>
       </div>
