--- a/src/index.njk
+++ b/src/index.njk
@@ -1,14 +1,14 @@
 ---
 layout: default.njk
-title: Portfolio
-description: My personal/profession website.
-metaTitle: Ryan Bullough - Freelance front-end web developer and UX designer based in Australia.
-metaDescription: Designer/Developer who blends code and user centric design philosophies.
+title: Freelance UX designer + web developer
+description: Portfolio site of Ryan Bullough, freelance web developer and UX designer.
+metaTitle: Ryan Bullough - Freelance front-end web developer and UX designer based in Canberra, Australia.
+metaDescription: Freelance UX designer and web developer based in Canberra, Australia.
 ---
 
 {%- block hero-%}
   {% set heroText = "Digital impact doesn't need to be extravagant." %}
-  {% set heroDescription = "Ryan Bullough is an Australian engineer who designs and builds simple, well-considered products with human-centred practices." %}
+  {% set heroDescription = "Ryan Bullough is an freelance UX designer and web developer who designs and builds simple, well-considered products with human-centred practices." %}
   {% set heroBGColor = "bg-gray-200" %}
   {% set heroTextColor = "black" %}
   {%- include 'hero.njk' -%}
@@ -21,4 +21,3 @@ metaDescription: Designer/Developer who blends code and user centric design phil
 {% block services %}
   {% include '_services.njk' %}
 {% endblock services %}
-
