--- a/src/_includes/_services.njk
+++ b/src/_includes/_services.njk
@@ -5,16 +5,16 @@
     {% for item in data.services %}
       {% if item.name === 'Services' %}
         <div class="sm:col-span-2 md:col-span-3 md:mb-5 sm:w-4/6">
-          <h2 class="text-gray-800 mb-10 text-5xl tracking-tighter font-bold dark:text-gray-200">{{ item.name }}</h2>
-          <p class="text-xl tracking-tight text-gray-700 dark:text-gray-300">{{ item.description }}</p>
+          <h2 class="text-gray-800 mb-10 text-5xl tracking-tighter font-bold">{{ item.name }}</h2>
+          <p class="text-xl tracking-tight text-gray-700">{{ item.description }}</p>
         </div>
         {% else %}
         <div>
-          <h3 class="text-gray-800 font-bold mb-8 text-3xl tracking-tight dark:text-white">{{ item.name }}</h3>
-          <p class="md:pb-5 post text-xl tracking-tight text-gray-700 dark:text-gray-300">{{ item.description | safe }}</p>
+          <h3 class="text-gray-800 font-bold mb-8 text-3xl tracking-tight">{{ item.name }}</h3>
+          <p class="md:pb-5 post text-xl tracking-tight text-gray-700">{{ item.description | safe }}</p>
           <ul class="leading-8">
             {% for item in item.tags%}
-            <li class="text-gray-700 dark:text-gray-300 font-bold tracking-tight"># {{item}}</li>
+            <li class="text-gray-700 font-bold tracking-tight"># {{item}}</li>
             {% endfor %}
           </ul>
         </div>
