--- a/src/_includes/hero.njk
+++ b/src/_includes/hero.njk
@@ -6,14 +6,14 @@
         <h1
           class="text-5xl md:text-8xl tracking-tighter font-bold mb-3 text-{{
             heroTextColor
-          }}-100 dark:text-white"
+          }}-100"
         >
           {{ heroText | safe }}
         </h1>
         <p
           class="text-xl md:text-3xl text-{{
             heroTextColor
-          }}-200 font-light dark:text-gray-400"
+          }}-200 font-light"
         >
           {{ heroDescription | safe }}
         </p>
