--- a/src/_includes/_singletop.njk
+++ b/src/_includes/_singletop.njk
@@ -7,7 +7,7 @@
       <div class="col-span-full lg:col-start-1 lg:col-end-10 pb-8 md:py-10">
         <h1 class="text-4xl md:text-5xl md:leading-tight tracking-tighter font-bold text-gray-800">{{ title }} </h1>
 
-        <P class="my-10 md:my-16 text-xl font-lg lg:w-2/3">{{ description }}</p>
+        <h2 class="my-10 md:my-16 text-xl font-lg lg:w-2/3 font-normal">{{ description }}</h2>
 
         <div class="text-sm flex flex-col space-y-10 md:space-y-0 md:flex-row md:justify-between md:items-center">
 
