updates to meta info

--- a/src/work/index.njk
+++ b/src/work/index.njk
@@ -1,6 +1,8 @@
 ---
 title: Works
 description: A collection of works by Ryan Bullough
+metaTitle: Recent works by freelance web developer + UX designer - Ryan Bullough
+metaDescription: Recent work examples by freelance web developer + UX designer, Ryan Bullough.
 layout: default
 eleventyNavigation:
   key: Work
