Standardise formats across works

--- a/src/_includes/_relatedItems.njk
+++ b/src/_includes/_relatedItems.njk
@@ -17,7 +17,7 @@
           {% if previousPost.data.featuredImg %}
             <picture class="inline">
               <img
-                class="inline"
+                class="aspect-4/3"
                 loading="lazy"
                 alt="{{ previousPost.data.title }}"
                 src="https://res.cloudinary.com/ryan-bullough/image/upload/{{previousPost.data.featuredImg}}.webp"
